--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
+    "react-type-animation": "^3.2.0",
     "sass": "^1.69.5"
   },
   "devDependencies": {
